<resources>
    <string name="app_name">Bookkeeping</string>
    <string name="editone">我要記帳</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="bodget">預算剩餘</string>
    <string name="see_excel">查看圖表分析</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_remark">添加備註</string>
    <string name="remark">備註</string>
    <string name="ensure">確定</string>
    <string name="cancel">取消</string>
    <string name="please_input_time">請輸入時間(24小時制)</string>
    <string name="time">00</string>
    <string name="search">請輸入搜尋關鍵字</string>
    <string name="about_appinfo">應用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">關於應用</string>
    <string name="about_app1">這是一個記帳程式，每天都要記帳來檢視自己的花費喔!</string>
    <string name="about_developer">開發者</string>
    <string name="about_me">關於我</string>
    <string name="about_loc">我叫meimei，是個學生</string>
    <string name="about_email">發送電子郵件</string>
    <string name="about_email2">我的信箱:s110916015@stu.ntue.edu.tw</string>
</resources>